RESOLVED FIXED133261
Object.prototype.toString() should use cached strings for null/undefined.
https://bugs.webkit.org/show_bug.cgi?id=133261
Summary Object.prototype.toString() should use cached strings for null/undefined.
Andreas Kling
Reported 2014-05-24 19:29:07 PDT
Object.prototype.toString() should use cached strings for null/undefined.
Attachments
Patch (5.14 KB, patch)
2014-05-24 19:29 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2014-05-24 19:29:35 PDT
WebKit Commit Bot
Comment 2 2014-05-24 20:51:13 PDT
Comment on attachment 232028 [details] Patch Clearing flags on attachment: 232028 Committed r169316: <http://trac.webkit.org/changeset/169316>
WebKit Commit Bot
Comment 3 2014-05-24 20:51:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.